--- a/wizard/stock_transfer_details.xml
+++ b/wizard/stock_transfer_details.xml
@@ -7,6 +7,13 @@
             <field name="model">stock.transfer_details</field>
             <field name="inherit_id" ref="stock.view_stock_enter_transfer_details" />
             <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='item_ids']/tree[@string='Inventory Details']/field[@name='product_id']" position="after">
+                    <field name="name"/>
+                </xpath>
+
+
+
                 <field name="picking_source_location_id" position="before">
                     <group>
                         <field 
