--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -126,9 +126,8 @@
                     <table style="width:100%">
                         <tr>
                             <td class="text-left" style="width:90%">
-                                <b>Cette commande est soumise à l'acceptation de nos conditions générales d'achats. 
-                                En cas de désaccord ou de contradiction se référer au contrat cadre. </b><br />
-
+                                <b>En cas de désaccord ou de contradiction se référer à la commande ouverte, 
+                                contrat cadre, cahier des charges et / ou conditions Générales d'Achats.</b><br />
                                 PLASTIGRAY - S.A.S. au capital de 2 102 400 € - Siège social : ZAC de Gray Sud CS 10133 70104 GRAY Cedex<br />
                                 Siret B 377 846 381 00020 - Code NAF 2229 A - Registre du Commerce GRAY - N°Identification T.V.A. FR 65 377 846 381<br />
                             </td>
