--- a/views/report_ar_commande.xml
+++ b/views/report_ar_commande.xml
@@ -17,7 +17,7 @@
                 font-weight: bold;
             }
             .expediteur {
-                font-size:10pt;
+                font-size:9pt;
                 text-align:center;
             }
             .client {
@@ -69,16 +69,19 @@
                     <div class="col-xs-5  text-center">
                         <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
                         <div class="expediteur">
+                            <b><span t-field="o.company_id.partner_id.name" /> <span t-field="o.company_id.partner_id.street" /></b><br />
+                            <span t-field="o.company_id.partner_id.zip" /> <span t-field="o.company_id.partner_id.city" /><br />
                             S.A.S. au capital de 2 102 400 € <br />
                             Siège social : ZAC de Gray Sud <br />
-                            CS 10133 - <b>70104 GRAY Cedex</b><br />
+                            CS 10133 - 70104 GRAY Cedex<br />
                             Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
                             Siret B 377 846 381 00020 - Code NAF 2229 A <br />
                             Registre du Commerce GRAY <br />
                             N°Identification T.V.A. FR 65 377 846 381 <br />
-                            <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
-                            <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
-                            <span t-field="o.partner_id.is_cofor"/>
+                            <span t-if="o.partner_id.is_cofor">
+                                <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
+                            </span>
                         </div>
                     </div>
                     <div class="col-xs-7">
