add info_client_complementaire sur LS, Liv et Fac

--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -339,7 +339,10 @@
                 </tbody>
             </table>
 
-
+            <t t-if="picking.is_sale_order_id.is_info_client">
+                <b>Information client complèmentaire : </b><br />
+                <span t-field="picking.is_sale_order_id.is_info_client" />
+            </t>
 
         </div>
     </t>
