--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -316,9 +316,13 @@ TODO :
                                 </tbody>
                             </table>
                             <t t-if="o.note">
-                                <b>Note : </b><span t-field="o.note" />
+                                <b>Note : </b><br />
+                                <span t-field="o.note" />
                             </t>
-
+                            <t t-if="o.is_sale_order_id.is_info_client">
+                                <b>Information client complèmentaire : </b><br />
+                                <span t-field="o.is_sale_order_id.is_info_client" />
+                            </t>
                         </div>
                     </t>
                  </t>
