modif nomenclature OF

--- a/wizard/mrp_product_produce_view.xml
+++ b/wizard/mrp_product_produce_view.xml
@@ -13,7 +13,7 @@
                     <field name="product_package_qty" context="{'is_product_package_qty':1}" />
                     <field name="finished_products_location_id" widget="selection"  />
                 </field>
-                <xpath expr="/form/group[@string='To Consume']/field/tree/field[@name='lot_id']" position="replace">
+                <xpath expr="/form/group[@string='To Consume']/field/tree/field[@name='lot_id']" position="after">
                     <field name="is_sequence" readonly="1" />
                 </xpath>
             </field>
