--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -208,6 +208,23 @@
             <field name="dpi">90</field>
         </record>
 
+        <record id="is_cout_paperformat" model="report.paperformat">
+            <field name="name">A4 - Coût article</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">25</field>
+            <field name="margin_bottom">15</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">20</field>
+            <field name="dpi">90</field>
+        </record>
+
+
 
 
     </data>
