--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -209,7 +209,8 @@
                                 <tr>
                                     <th class="text-center">Date</th>
                                     <th class="text-center">Type</th>
-                                    <th class="text-right">Quantité</th>
+                                    <th class="text-right">Quantité Commandée</th>
+                                    <th class="text-right">Quantité Reçue</th>
                                     <th class="text-right">Unité</th>
                                     <t t-if="o.type_commande!='ouverte'">
                                         <th class="text-center">N°Commande</th>
@@ -221,6 +222,7 @@
                                     <td class="text-center"><span t-field="l.date"/></td>
                                     <td class="text-center"><span t-field="l.type_cde"/></td>
                                     <td class="text-right"><span t-field="l.quantite"/></td>
+                                    <td class="text-right"><span t-field="l.quantite_rcp"/></td>
                                     <td class="text-right"><span t-field="l.uom_id"/></td>
                                     <t t-if="o.type_commande!='ouverte'">
                                         <td class="text-center"><b><span t-field="l.purchase_order_id.name"/></b></td>
